EPBDS-7095 Add autoconfiguration for various Java version and memory size
--HG--
branch : 5.20.x